# C-

./: complex2d.cpp  complex2d.h  main.cpp
TP1/: complex2d.h  main.cpp
TP1_complex_numbers/: complex2d.cpp
TP2/: binary_search.cpp  binary_search.h  linear_search.cpp  matrix.h  num_matrix.h  search.cpp  search.h  search_main.cpp
TP2_matrix+search/: binary_search.cpp  binary_search.h  jump_search.cpp  jump_search.h  linear_search.h  matrix_main.cpp  num_matrix.h  search.h
TP3_vector/: main_map.cpp  main_queue_stack.cpp  main_unordered_map.cpp
TP4_pokemon/: CMakeLists.txt  main.cpp
TP4_pokemon/headers/: card.h  energy_card.h  player.h  pokemon_card.h  trainer_card.h
TP4_pokemon/source/: energy_card.cpp  player.cpp  pokemon_card.cpp  trainer_card.cpp
TP5_time_series/: CMakeLists.txt  GaussianGenerator.cpp  GaussianGenerator.h  TimeSeriesGenerator.h
TP5_timeseries/: GaussianGenerator.cpp  SinWaveGenerator.cpp  StepGenerator.cpp  StepGenerator.h  TimeSeriesDataset.cpp  TimeSeriesDataset.h  TimeSeriesGenerator.cpp
TP5_timeseries/headers/: GaussianGenerator.h  KNN.h  SinWaveGenerator.h  TimeSeriesDataset.h  TimeSeriesGenerator.h
TP5_timeseries/source/: GaussianGenerator.cpp  KNN.cpp  SinWaveGenerator.cpp  StepGenerator.cpp  TimeSeriesDataset.cpp  TimeSeriesGenerator.cpp
